# errorhandling-py

./: .gitignore  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  postStartCommand.bash
.github/workflows/: deploying.yaml  testing.yaml  tests.yaml
tests/: err_test.py  ok_test.py  private_test.py
